--- a/index.html
+++ b/index.html
@@ -12,59 +12,101 @@
     <main>
         <h2>Cards</h2>
         <div class="content">
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
+            <div class="row1">
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
             </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
+            <div class="row2">
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
             </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
-            </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
-            </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
-            </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
-            </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
-            </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
-            </div>
-            <div class="card">
-                <img src="resources/images/pexels-photo-7134986.jpeg">
-                <h3>Card Title</h3>
-                <div class="tag">CARD TAG</div>
-                <button class="button">+</button>
+            <div class="row3">
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
+                <div class="card">
+                    <img src="resources/images/pexels-photo-7134986.jpeg">
+                    <div class="card-text">
+                        <h3>Card Title</h3>
+                        <div class="tag">CARD TAG</div>
+                    </div>
+                    <a href="http://google.com" target="_blank">
+                        <button class="button">+</button>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
